--- a/Core/Sorces/ApiUrls.resx
+++ b/Core/Sorces/ApiUrls.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="PlayerProfile" xml:space="preserve">
+    <value>link=/api/v1/people/{0}</value>
+  </data>
   <data name="TeamDetailStatistic" xml:space="preserve">
     <value>http://www.nhl.com/stats/rest/grouped/teams/enhanced/season/teampercentages?cayenneExp=seasonId={0}%20and%20gameTypeId={1}</value>
   </data>
